<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/img_user_picture"
        android:layout_height="@dimen/img_user_picture"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/settings_user"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginEnd="24dp"
        android:background="@drawable/diary_content_border"
        android:text="@string/settings_login"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_userName" />

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/settings_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_data"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/view_top" />

    <ImageView
        android:id="@+id/img_sync"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="10dp"
        android:background="@mipmap/ic_backup"
        app:layout_constraintStart_toStartOf="@+id/tv_data"
        app:layout_constraintTop_toBottomOf="@+id/tv_data" />


    <TextView
        android:id="@+id/tv_sync"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@mipmap/ic_next"
        android:text="@string/settings_backup"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_sync"
        app:layout_constraintTop_toTopOf="@+id/img_sync" />

    <ImageView
        android:id="@+id/img_download"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_download"
        app:layout_constraintEnd_toEndOf="@+id/img_sync"
        app:layout_constraintStart_toStartOf="@+id/img_sync"
        app:layout_constraintTop_toBottomOf="@+id/img_sync" />

    <TextView
        android:id="@+id/tv_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@mipmap/ic_next"
        android:gravity="center_vertical"
        android:text="@string/settings_download"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_download"
        app:layout_constraintTop_toTopOf="@+id/img_download" />

    <View
        android:id="@+id/view_down"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/settings_view"
        app:layout_constraintEnd_toEndOf="@+id/tv_sync"
        app:layout_constraintStart_toStartOf="@+id/img_sync"
        app:layout_constraintTop_toBottomOf="@+id/img_download" />

    <TextView
        android:id="@+id/tv_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_system"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_data"
        app:layout_constraintTop_toBottomOf="@+id/view_down" />

    <ImageView
        android:id="@+id/img_font"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="10dp"
        android:background="@mipmap/ic_textsize"
        app:layout_constraintStart_toStartOf="@+id/img_sync"
        app:layout_constraintTop_toBottomOf="@+id/tv_system" />

    <TextView
        android:id="@+id/tv_font"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@mipmap/ic_next"
        android:text="@string/settings_textsize"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_font"
        app:layout_constraintTop_toTopOf="@+id/img_font" />

    <ImageView
        android:id="@+id/img_language"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_translate"
        app:layout_constraintStart_toStartOf="@+id/img_font"
        app:layout_constraintTop_toBottomOf="@+id/img_font" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@mipmap/ic_next"
        android:text="@string/settings_language"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_language"
        app:layout_constraintTop_toTopOf="@+id/img_language" />

    <ImageView
        android:id="@+id/img_lock"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_lock"
        app:layout_constraintStart_toStartOf="@+id/img_language"
        app:layout_constraintTop_toBottomOf="@+id/img_language" />

    <TextView
        android:id="@+id/tv_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/settings_lock"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_lock"
        app:layout_constraintStart_toEndOf="@+id/img_lock"
        app:layout_constraintTop_toTopOf="@+id/img_lock" />

    <ImageView
        android:id="@+id/img_notification"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_notification"
        app:layout_constraintStart_toStartOf="@+id/img_lock"
        app:layout_constraintTop_toBottomOf="@+id/img_lock" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/settings_notification"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_notification"
        app:layout_constraintStart_toEndOf="@+id/img_notification"
        app:layout_constraintTop_toTopOf="@+id/img_notification" />

    <ImageView
        android:id="@+id/img_feedBack"
        android:layout_width="@dimen/settings_icon"
        android:layout_height="@dimen/settings_icon"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_email"
        app:layout_constraintStart_toStartOf="@+id/img_notification"
        app:layout_constraintTop_toBottomOf="@+id/img_notification" />

    <TextView
        android:id="@+id/tv_feedBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@mipmap/ic_next"
        android:text="@string/settings_feedback"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_feedBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_feedBack"
        app:layout_constraintTop_toTopOf="@+id/img_feedBack" />

    <Switch
        android:id="@+id/switch_lock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_lock"
        app:layout_constraintTop_toTopOf="@+id/tv_lock" />

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_notification"
        app:layout_constraintTop_toTopOf="@+id/tv_notification" />

</android.support.constraint.ConstraintLayout>